Tweak to nav link size to avoid overflow in windows

--- a/css/site.less
+++ b/css/site.less
@@ -325,7 +325,7 @@ nav#main a,nav#main .selected {
   display: block;
   letter-spacing: 1px;
   text-transform: uppercase;
-  font-size: 16px;  
+  font-size: 14px;  
   font-weight: 400;
   vertical-align: bottom;
 }   
